--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
 }
+apply plugin: 'com.android.application'
 
 android {
     compileSdk 32
@@ -41,6 +42,16 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+
+//    이미지 인식 https://firebase.google.com/docs/ml/android/recognize-text#kotlin+ktx
+    implementation 'com.google.firebase:firebase-functions:20.0.2'
+    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.google.firebase:firebase-common-ktx:20.1.1'
+    implementation platform('com.google.firebase:firebase-bom:29.3.1')
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.google.firebase:firebase-auth-ktx'
+    implementation 'com.google.firebase:firebase-firestore-ktx'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -49,6 +60,31 @@ dependencies {
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
 
+    def camerax_version = "1.1.0-alpha04"
+    implementation "androidx.camera:camera-camera2:$camerax_version"
+    implementation "androidx.camera:camera-lifecycle:$camerax_version"
+    implementation "androidx.camera:camera-view:1.0.0-alpha24"
+    implementation 'com.google.mlkit:text-recognition-korean:16.0.0-beta4'
+
+    implementation "com.google.mlkit:barcode-scanning:17.0.2"
+    implementation 'androidx.core:core-ktx:1.7.0'
 
     implementation "com.github.bumptech.glide:glide:3.7.0"
+//    https://developers.google.com/ml-kit/vision/text-recognition/v2/android
+    // To recognize Latin script
+    implementation 'com.google.mlkit:text-recognition:16.0.0-beta4'
+
+    // To recognize Chinese script
+    implementation 'com.google.mlkit:text-recognition-chinese:16.0.0-beta4'
+
+    // To recognize Devanagari script
+    implementation 'com.google.mlkit:text-recognition-devanagari:16.0.0-beta4'
+
+    // To recognize Japanese script
+    implementation 'com.google.mlkit:text-recognition-japanese:16.0.0-beta4'
+
+    // To recognize Korean script
+    implementation 'com.google.mlkit:text-recognition-korean:16.0.0-beta4'
 }
+
+//https://git.spacen.net/MediaPipe/mlkit/commit/e60653a34e96ca49b5a055fbfceaddbae21e3633
