--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.giftwallet">
+    <!--    출처: https://juahnpop.tistory.com/217 [Blacklog]-->
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACTION_OPEN_DOCUMENT" />
+<!--    <uses-permission android:name="android.permission.ACTION_OPEN_DOCUMENT_TREE"/>-->
+    <!-- 권한 그룹 : STORAGE-->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <uses-feature android:name="android.hardware.camera"/>
     <uses-permission android:name="android.permission.CAMERA"/>
+
+    <!--권한 그룹 : CARENDAR-->
+    <uses-permission android:name="android.permission.READ_CALENDAR"/>
+    <uses-permission android:name="android.permission.WRITE_CALENDAR"/>
+<!--    권한 그룹 : LOCATION-->
+<!--    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>-->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION_LOCATION"/>
+  
+
 
 <!--    https://devsmin.tistory.com/27-->
 <!--    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>-->
@@ -38,7 +52,16 @@
             android:value="ocr" />
 
     </application>
+    <queries>
 
+        <provider android:authorities="com.example.giftwallet"
+            android:enabled = "true"
+            android:exported = "true" />
+        <provider
+            android:authorities="com.google.android.apps.photos.contentprovider"
+            android:enabled = "true"
+            android:exported = "true" />
+    </queries>
 
 
 </manifest>
