--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdk 32
+    buildFeatures.viewBinding true
 
     defaultConfig {
         applicationId "com.example.giftwallet"
@@ -38,6 +39,9 @@ android {
 
 dependencies {
 
+
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
+
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
@@ -52,6 +56,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth-ktx'
     implementation 'com.google.firebase:firebase-firestore-ktx'
     implementation 'com.google.mlkit:vision-common:16.5.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
