--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,9 @@ android {
 
 dependencies {
 
+//    gif intro
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
 
