--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,41 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.giftwallet">
-    <!--    출처: https://juahnpop.tistory.com/217 [Blacklog]-->
-    <!--    https://devsmin.tistory.com/27-->
+    <!-- 출처: https://juahnpop.tistory.com/217 [Blacklog] -->
+    <!-- https://devsmin.tistory.com/27 -->
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACTION_OPEN_DOCUMENT" />
-<!--    <uses-permission android:name="android.permission.ACTION_OPEN_DOCUMENT_TREE"/>-->
-    <!-- 권한 그룹 : STORAGE-->
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.ACTION_OPEN_DOCUMENT" /> <!-- <uses-permission android:name="android.permission.ACTION_OPEN_DOCUMENT_TREE"/> -->
+    <!-- 권한 그룹 : STORAGE -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
-    <uses-feature android:name="android.hardware.camera"/>
-    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-feature android:name="android.hardware.camera" />
 
-    <!--권한 그룹 : CARENDAR-->
-    <uses-permission android:name="android.permission.READ_CALENDAR"/>
-    <uses-permission android:name="android.permission.WRITE_CALENDAR"/>
-<!--    권한 그룹 : LOCATION-->
-<!--    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>-->
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION_LOCATION"/>
+    <uses-permission android:name="android.permission.CAMERA" /> <!-- 권한 그룹 : CARENDAR -->
+    <uses-permission android:name="android.permission.READ_CALENDAR" />
+    <uses-permission android:name="android.permission.WRITE_CALENDAR" /> <!-- 권한 그룹 : LOCATION -->
+    <!-- <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/> -->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION_LOCATION" />
 
+    <queries>
+        <provider
+            android:authorities="com.example.giftwallet"
+            android:enabled="true"
+            android:exported="true" />
+        <provider
+            android:authorities="com.google.android.apps.photos.contentprovider"
+            android:enabled="true"
+            android:exported="true" />
+    </queries>
 
     <application
         android:allowBackup="true"
-        android:requestLegacyExternalStorage="true"
+        android:hardwareAccelerated="false"
         android:icon="@mipmap/ic_smilecat"
         android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_smilecat_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.GiftWallet"
-        android:hardwareAccelerated="false" >
-        <activity android:name=".MainActivity"/>
+        android:theme="@style/Theme.GiftWallet">
+        <activity
+            android:name=".ImageZoomActivity"
+            android:exported="false" />
+        <activity android:name=".MainActivity" />
         <activity
             android:name=".AddGiftActivity"
-            android:exported="false" />
-
-        <!--        인트로-->
+            android:exported="false" /> <!-- 인트로 -->
         <activity
             android:name=".IntroActivity"
             android:exported="true">
@@ -43,24 +51,12 @@
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-
             </intent-filter>
         </activity>
+
         <meta-data
             android:name="com.google.firebase.ml.vision.DEPENDENCIES"
             android:value="ocr" />
-
     </application>
-    <queries>
-
-        <provider android:authorities="com.example.giftwallet"
-            android:enabled = "true"
-            android:exported = "true" />
-        <provider
-            android:authorities="com.google.android.apps.photos.contentprovider"
-            android:enabled = "true"
-            android:exported = "true" />
-    </queries>
-
 
 </manifest>
