20220608 update기능개발 시작(editActivity추가)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,9 @@
             android:name=".AddGiftActivity"
             android:exported="false" /> <!-- 인트로 -->
         <activity
+            android:name=".EditGiftActivity"
+            android:exported="false" /> <!-- 인트로 -->
+        <activity
             android:name=".IntroActivity"
             android:exported="true">
             <intent-filter>
